# centauri

./: .gitignore  README.rst  noxfile.py  pyproject.toml  requirements.txt
src/centauri/: client.py
src/centauri/snowflake/: my_snowpark.py
src/centauri/walmart/: client.py  main.py  parser.py
src/centauri/walmart/models/: __init__.py
src/centauri/walmart/schemas/: parser.py
tests/: test_centauri.py
